# pygsl

./: .gitignore  CREDITS  CREDITS.rst  ChangeLog  MANIFEST.in  Makefile  README  README.html  README.md  README.rst  TODO  TODO.rst  citation.cff  common_objects.py  debug_display.py  gsl_Extension.py  gsl_numobj.py  gsl_packages.py  gsl_site_example.py  meson.build  pyproject.toml  setup.cfg  setup.py  setup_testing.py  swig_extension.py  test.py
Include/: meson.build
Include/pygsl/: arrayobject.h  block_helpers.h  block_helpers_numarray.h  block_helpers_numeric.h  block_helpers_numpy.h  capsulethunk.h  capsuletrunk.h  compilers.h  complex_helpers.h  error_helpers.h  errorno.h  function_helpers.h  general_helpers.h  intern.h  meson.build  numpy_api_version.h  old_numpy_compat.h  profile.h  pygsl.h  pygsl_features.h  pygsl_features_config.h  rng.h  rng_helpers.h  solver.h  string_helpers.h  transition.h  utils.h
Lib/: block_helpers.c  complex_helpers.c  error_helpers.c  function_helpers.c  general_helpers.c  profile.c  rng_helpers.c
bak/: gsl_packages.py  setup.cfg  setup.py
compat/: download-gsl-2.8.sh  download-swig-4.4.sh  download-swig4.3.sh
doc/: ChangeLog  Makefile  README  README-Distributors.html  README-RPM  README.html  TODO.html  conf.py  const.tex  copyright.tex  differentiation.tex  errors.tex  histogram.tex  ieee.tex  index.html  index.rst  init.tex  install.tex  mklinks  pygsl.tex  pygsl_msys2_prepare.sh  release_checklist.rst  rng.tex  sf.tex  statistics.tex
docker/: Dockerfile  entrypoint.sh
examples/: bspline.py  bspline2.py  bspline3.py  chebyshev.py  combination.py  deriv.py  eigen.py  eigen_nsymmv.py  fft.py  hankel.py  histogram.py  histogram2.py  integrate.py  interpolation.py  interpolation2.py  interpolation2d.py  minimize.py  monte.py  multifit.py  multifit_nlin.py  multifit_robust.py  multilarge.py  multiminimize.py  multiroots.py  odeiv.py  odeiv2.py  poly.py  qrng.py  rng.py  roots.py  siman.py  siman_tsp.py  sum.py
gsl_dist/: __init__.py  array_includes.py  gsl_CodeGenerator.py  gsl_CodeGenerator2.py  gsl_CodeGenerator3.py  gsl_Config.py  gsl_Extension.py  gsl_Location.py  gsl_features.py  gsl_site_example.py  swig_extension.py
pygsl/: __init__.py  _block.py  _callback.py  _generic_solver.py  _numobj.py  _poly.py  _version.py  blas.py  block.py  bspline.py  chebyshev.py  combination.py  eigen.py  errors.py  fft.py  fit.py  gsl_function.py  gslwrap.py  hankel.py  histogram.py  integrate.py  interpolation.py  interpolation2d.py  interpolation2d_wrap.py  linalg.py  math.py  matrix_pierre.py  meson.build  minimize.py  monte.py  multifit.py  multifit_nlin.py  multifit_nlinear.py  multifit_robust.py  multilarge_nlinear.py  multiminimize.py  multiroots.py  odeiv.py  odeiv2.py  permutation.py  (+9 more)
pygsl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ChangeLog  _histogrammodule.c  _rngmodule.c  const_add_cgs.c  const_add_math.c  const_add_mks.c  const_add_num.c  const_cgs_array.c  const_cgsm_array.c  const_mks_array.c  const_mksa_array.c  const_num_array.c  constmodule.c  derivmodule.c  diff_deriv_common.c  diffmodule.c  errortestmodule.c  fftmodule.c  histogrammodule.c  ieeemodule.c  initmodule.c  matrixmodule.c  meson.build  multiminmodule.c  qrng_module.c  qrng_module_defines.h  qrngmodule.c  rngmodule.c  scientific_constants.c  sf_functions.c  sf_index.c  sfmodule.c  simanmodule.c  statisticsmodule.c
src/block/: convert.py  gsl_block.i  gsl_block_char.i  gsl_block_complex.i  gsl_block_complex_float.i  gsl_block_double.i  gsl_block_float.i  gsl_block_generic.i  gsl_block_generic_typed.i  gsl_block_int.i  gsl_block_long.i  gsl_block_short.i  gsl_sparse_wrapper.i  meson.build
src/bspline/: bspline.i  bspline.ic  bspline2.i  meson.build
src/callback/: chars.c  function_helpers.c  function_helpers_multifit_nlinear.ic  gsl_callback.i  gsl_chebyshev.i  gsl_function_test.i  gsl_integration.i  gsl_min.i  gsl_monte.i  gsl_multifit.i  gsl_multifit2.i  gsl_multifit_common.i  gsl_multifit_nlin.i  gsl_multifit_nlinear.i  gsl_multifit_nlinear_generic.i  gsl_multifit_robust.i  gsl_multilarge_nlinear.i  gsl_multimin.i  gsl_multiroots.i  gsl_odeiv.i  gsl_odeiv2.i  gsl_roots.i  meson.build  odeiv.ic  odeiv_func2.ic  pygsl_multifit.ic  pygsl_multifit2.ic  pygsl_multifit_nlinear.h  pygsl_multifit_nlinear.ic  pygsl_multifit_nlinear_generic.h  pygsl_multifit_nlinear_generic.ic  pygsl_multilarge_nlinear.h  pygsl_multilarge_nlinear.ic
src/const/: const_cgsm_array.c  const_m_array.c  const_mks_array.c  constmodule.c  meson.build
src/gslwrap/: blas.i  combination.i  complex.i  eigen.i  error.i  fft.i  gsl_gslwrap.i  gsl_gslwrap_wrap.c  gslwrap.py  interpolation.i  interpolation2d.i  linalg.i  math.i  matrix.i  meson.build  permutation.i  vector.i
src/hankel/: gsl_hankel.i
src/histogram/: histogram.ic  histogram2d.ic  histogram_common.ic  histogram_doc.ic  histogram_pdf.ic  histogram_pdf_common.ic  histogrammodule.c  meson.build
src/init/: block_helpers.c  block_helpers_numarray.ic  block_helpers_numeric.ic  block_helpers_numpy.ic  complex_helpers.c  error_helpers.c  errorno.c  function_helpers.c  general_helpers.c  initmodule.c  inittestmodule.c  meson.build  profile.c  rng_helpers.c
src/obsolete/: fftmodule.c
src/poly/: gsl_poly.i  meson.build  poly.ic
src/rng/: meson.build  rng_distributions.h  rng_helpers.c  rng_list.h  rng_multinomial.ic  rngmodule.c  rngmodule_docs.h
src/statistics/: ChangeLog  _statmodule.c  charmodule.c  doublemodule.c  floatmodule.c  functions.c  intmodule.c  longmodule.c  meson.build  shortmodule.c  statmodule.h  ucharmodule.c
src/sum/: gsl_sum.i  meson.build
src/swig_test/: meson.build  swig_fail_on_init.i  swig_test.i
src/transform/: arraycopy.c  core.c  doc.h  fft.c  meson.build  space.c  transformmodule.c  transformtypes.h  wavelet.c  wavelet.h
swig_src/: _callback.py  _poly.py  block_wrap.c  bspline_wrap.c  callback_wrap.c  gslwrap.py  gslwrap_wrap.c  (+8 more)
testing/src/sf/: meson.build  sf.i  sf.py  sf__arrays.c  sf__data.c  sf__evals.c  sf__index.c  sf__objects.c  sf_wrap.xml  sfmodule_testing.c
(+262 files in other folders)
