[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy<2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pygsl"
version = "2.4.1"
dependencies = [
    "numpy<2.0",
]

description = "GNU Scientific Library Interface"
# long_description = "This project provides a python interface for the GNU scientific library (gsl)"
# license = "GPL"
authors = [
   {name = "Achim Gaedke", email="AchimGaedke@users.sourceforge.net"},
   {name = "Pierre Schnizer", email="pierre.schnizer@helmholtz-berlin.de"},
   {name = "Charl Linssen" }
]


[project.urls]
homepage = "https://github.com/hz-b/bact-archiver"
