py.extension_module(
  'errno',
  'errorno.c',
  dependencies : [gsl_dep],
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl',
 )

 py.extension_module(
  'init',
  'initmodule.c',
   dependencies : [gsl_dep],
   install: true,
   include_directories : inc_dirs,
   subdir: 'pygsl',
 )

 py.extension_module(
  'inittest',
  'inittestmodule.c',
  dependencies : [gsl_dep],
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl',
 )