py.extension_module(
  '_stat',
  '_statmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'char',
  'charmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'uchar',
  'ucharmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'short',
  'shortmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'int',
  'intmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'long',
  'longmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'float',
  'floatmodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'double',
  'doublemodule.c',
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )