py.extension_module(
  '_stat',
  '_statmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'char',
  'charmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'uchar',
  'ucharmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'short',
  'shortmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  install: true,
  include_directories : inc_dirs,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'int',
  'intmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

py.extension_module(
  'long',
  'longmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'float',
  'floatmodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )

 py.extension_module(
  'double',
  'doublemodule.c',
  dependencies : [gsl_dep],
  include_directories : inc_dirs,
  install: true,
  subdir: 'pygsl' / 'statistics',
 )